<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:checked="true"
        android:enabled="true"
        android:icon="@drawable/ic_home_fill"
        android:title="@string/home" />
    <item
        android:id="@+id/action_product"
        android:enabled="true"
        android:icon="@drawable/ic_product"
        android:title="@string/product" />
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting" />
</menu>